# soulbox

./: .env.example  .gitignore  BILLING_SECURITY_FIXES.md  CLAUDE.md  Cargo.toml  Cargo.toml.backup  Dockerfile  LICENSE  PROJECT_STATUS.md  README.md  TODO.md  build.rs  docker-compose.yml  run_auth_demo.sh  soulbox.toml  sqlx-data.json  test_api.py  test_api.sh  test_docker_integration.rs  test_docker_simple.rs  test_grpc.sh  test_simple_api.rs
.claude/agents/: code-audit-expert.md  code-testing-expert.md  e2b-migration-architect.md  rust-architect-designer.md  rust-code-reviewer.md  rust-implementation-expert.md  rust-project-analyzer.md  rust-test-master.md
.github/workflows/: ci.yml
.sqlx/: query-02339b3015d7f70a786b129f70683194c7be125de0547b8c649b897a2130ecea.json  query-055f5e41ad30b49539b27558f0f24eee54ce9b573427a95b838971eb15d0ee31.json  query-0cf3cb353ee64b2ba811b89232bd8701aa20a9dbf6411aab937a6a5d474657ef.json  query-146c02ff99ed85648b3c58a886676e46faca5819b780c3ac9f0a2b0bf6b1410f.json  query-1505c2052d903f54b4f71b0109ea267276694209512665dfbbf48de174ae53b0.json  query-177f710e4c6bd0c4a57990a08fee5a6c8003c1f51ff813adc83ca1efdc4206f4.json  query-1ab7d62b91775c4f7d971714d23eaaa3de97e304d35f260844b01b63844e5b30.json  query-230d4779889a90fc56523caf6a13ec85fc1feb16969ef27225eaedfaaee492d2.json  query-24e74592811f3d34b03d43ef781c48d95d21f74050cd1ca5b33dc46cf704693a.json  query-3065bb115f8f59cc9ae778afe058f227fabd433f9f961803c6502ab5b0ced1ec.json  query-31ce079b1aabf35af535dcb619ff91b23c8284d48f77d0efdaf60b78b2aeb15d.json  query-45cf526941781c866a89db03ea80f1bd2a1cf4e51916cd0d0cbe0b45317d9c7a.json  query-463a7af663aa8ca55ea54bce6d09e254f75841ae2a39ff7d49ad27d1051fa7e3.json  query-531ee8477e93f878c902bc6d9c4e8d0f710c8f2b21ab5b8e04f74d6f2cb6f4ca.json  query-54bfeaf2c286d4be1801c50cffd61017f5589e3defbb75cde40640347c00e9db.json  query-54ffdea5153be34ccc4ff0d9f2df54466c0d9024a8a0fedd065501d6edd1465a.json  query-55970c459d82eb9ec9129f0510eeecc1eb9ff10edbd27dbe78099dd98481722b.json  query-5b78c6e58898de8e2726aa29498cdb9450acf8b08439cf72145f786e117f9a36.json  query-5eb5fd8b747d4a1d78132fae7230e541356973e1a5be73c50549fb04257b6725.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-64bda4ad1db7e18b4abdf81ea7d5fca5991bdbc4cf4257f194793fb65167c268.json  query-67fee66030cfd8604d593e1d09624e8f86621b900fe1d5ec0b2a130d12bf9d8b.json  query-6e4e890fbc52234867c207d79659877a442f9c9cd1b2c27f9e10d286de51bf4c.json  query-71f488376b2424acaba9381e6dc275c8977d02d7d61ff5ce3ab92cadcb739a31.json  query-763a5ac4d3e39f74e9fefad04492a33877d905c616ef873aafa242ceea2d4691.json  query-7d3a79453076f3817a939500d7fdf27084a32677c0de25d1f4647f88b9249f2a.json  query-7f5763ecd230c2f665860f6ec9d48d22d76bbec7eeec317fb50e6a01fad1a4f9.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8472a809d689d5b32b3d587602bc75a9bb1c20d9614b04d9e10c82d0b9645c57.json  query-946c078f32829ddcee9b086339b03c2d31e625d8306bee231656413ac6f64f4c.json  query-a9ce691cf3c1556a3f4348b09569e2c49fedf376ebe92c0ce751a1d0bed8fe61.json  query-a9f4cfe9370820785f8566bb353d8fcf35ee43d336a272c964e5b18a0f8c1c0c.json  query-b97a28a70d348366652ed3c270ffe01680dcff3df884c51886681fbb30e37a72.json  query-c2b1d6ed945160f40cace8f9e059f04926ddc7447de120219d4b3becc431ce15.json  query-c9a8ca1d762dcd01fe9944e79d8ec131d17add1a73ea245a59eda4b640632d7d.json  query-d1b3221ad75189ec7e136d3442eeb535a1d108a004ae621f0b57e12689259d19.json  query-d26b9a937bdfd80b20f47920db5ea8351847b798b0bbce29a62ee00724414fa8.json  query-d4342f34bf2032a8740e15576f6c4950b2c1feac5210b33634a60d09d50c50f7.json  query-d614a17f33f1cf342b804cff4a062b562faaa37ae20080b5e25bd3a742f42479.json  query-d6dd0a7b59c022ca203331121b6c6ad9c283985eb0a9a1ed68af374454a7530f.json  (+10 more)
benches/: api_latency.rs  concurrent_execution.rs  container_benchmark.rs  container_startup.rs  performance.rs  regression_tests.rs  simple_performance.rs
docs/: TEMPLATES.md  api-reference.md  error_handling_analysis.md  firecracker-setup.md  troubleshooting.md  user-guide.md
examples/: audit_demo.rs  auth_api_demo.rs  auth_demo.rs  billing_system_demo.rs  docker_integration_demo.rs  firecracker_test.rs  rbac_demo.rs  template_usage.rs  test_docker_integration.rs  test_template_system.rs
migrations/postgres/: 001_initial_schema.sql
migrations/sqlite/: 001_initial_schema.sql
proto/: soulbox.proto
scripts/: build_vm_rootfs.sh  run-performance-tests.sh  setup-firecracker.sh  setup_firecracker.sh
src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  lockfree.rs  main.rs  main.rs.backup  sandbox.rs  sandbox_manager.rs  server.rs  soulbox.v1.rs  soulbox_grpc.rs  validation.rs  zero_copy.rs
src/api/: audit.rs  auth.rs  billing.rs  files.rs  hot_reload.rs  mod.rs  permissions.rs  pty.rs  templates.rs
src/audit/: external_integration.rs  middleware.rs  mod.rs  models.rs  service.rs
src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  models.rs
src/billing/: cost_calculator.rs  error_handling.rs  metrics_collector.rs  mod.rs  models.rs  precision.rs  simple_aggregator.rs  simple_collector.rs  storage.rs  stripe_integration.rs  test_config.rs  tests.rs  usage_aggregator.rs
src/cli/: config.rs  mod.rs
src/container/: code_executor.rs  error_recovery.rs  manager.rs  mod.rs  network.rs  pool.rs  resource_limits.rs  runtime.rs  sandbox.rs  startup_optimizer.rs  tests.rs
src/database/: batch_operations.rs  config.rs  connection.rs  health_check.rs  migrations.rs  mod.rs  models.rs
src/debug/: breakpoint.rs  inspector.rs  mod.rs
src/dependencies/: cache.rs  installer.rs  mod.rs
src/e2b/: adapter.rs  api.rs  api_simple.rs  mod.rs  (+2 more)
tests/: billing_comprehensive_tests.rs  billing_integration_tests.rs  billing_property_tests.rs  billing_security_tests.rs  container_management_tests.rs  docker_integration_test.rs  filesystem_isolation_tests.rs  grpc_protobuf_tests.rs  grpc_service_tests.rs  integration_completed_tasks.rs  integration_test.rs  performance_validation.rs  protocol_integration_tests.rs  real_code_execution_test.rs  websocket_protocol_tests.rs
(+108 files in other folders)
