[package]
name = "soulbox"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Rust-based AI code execution sandbox"
license = "MIT"
repository = "https://github.com/yourusername/soulbox"
homepage = "https://soulbox.dev"
readme = "README.md"
keywords = ["sandbox", "code-execution", "ai", "grpc", "websocket"]
categories = ["development-tools", "web-programming", "api-bindings"]

[features]
default = ["server", "client"]
server = []
client = []

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# gRPC and Protocol Buffers (simplified)
tonic = "0.14"
prost = "0.12"
prost-types = "0.12"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP
axum = "0.8"
tower = { version = "0.4", features = ["util"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Container Runtime (simplified)
bollard = "0.16"

# Authentication (simplified)
jsonwebtoken = "9.2"
sha2 = "0.10"
bcrypt = "0.15"
base64 = "0.21"

# Synchronization
parking_lot = "0.12"

# Additional utilities
url = "2.4"
urlencoding = "2.1"
rand = { version = "0.8", features = ["small_rng"] }
prometheus = "0.13"
regex = "1.10"

[build-dependencies]
tonic-build = "0.14"

[dev-dependencies]
tokio-test = "0.4"