[package]
name = "soulbox"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "High-performance Rust-based AI code execution sandbox"
license = "MIT"
repository = "https://github.com/yourusername/soulbox"
homepage = "https://soulbox.dev"
readme = "README.md"
keywords = ["sandbox", "code-execution", "ai", "grpc", "websocket"]
categories = ["development-tools", "web-programming", "api-bindings"]

[features]
default = ["server", "client"]
server = []
client = []
dev-tools = []

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Lock-free data structures
dashmap = "6.0"
crossbeam = "0.8"
bytes = "1.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# gRPC and Protocol Buffers
tonic = "0.14"
tonic-reflection = "0.14"
prost = "0.12"
prost-types = "0.12"
http-body-util = "0.1"

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# HTTP
axum = "0.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Container Runtime (simplified)
bollard = "0.16"

# Authentication (simplified)
jsonwebtoken = "9.2"
sha2 = "0.10"
bcrypt = "0.15"
base64 = "0.22"

# Synchronization
parking_lot = "0.12"

# Additional utilities
url = "2.4"
urlencoding = "2.1"
rand = { version = "0.8", features = ["small_rng"] }
prometheus = "0.13"
regex = "1.10"

# Database (simplified)
surrealdb = "1.0"

# Redis for session management
redis = { version = "0.24", features = ["async-std-comp"] }

# Additional dependencies for restored modules
tokio-stream = "0.1"
async-stream = "0.3"

# System calls (for PTY terminal support)
libc = "0.2"

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
dirs = "5.0"
rust_decimal = { version = "1.37", features = ["serde"] }
tempfile = "3.10"
notify = "6.1"
tar = "0.4"

[build-dependencies]
tonic-build = "0.14"
prost-build = "0.12"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
proptest = "1.4"
test-case = "3.1"
tokio-test = "0.4"
reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "simple_performance"
harness = false

[[bench]]
name = "container_benchmark"
harness = false